objects/Reference_Data__mdt.object
<CustomObject>
    <description>Data mappings from other systems</description>
    <fields>
        <fullName>Language__c</fullName>
        <description>The language of the value, defaults to english</description>
        <inlineHelpText>The language of the value, defaults to english</inlineHelpText>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                    <default>true</default>
                    <label>English</label>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salesforce_Value__c</fullName>
        <description>The value of the data in Salesforce</description>
        <inlineHelpText>The value of the data in Salesforce</inlineHelpText>
        <label>Salesforce Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Value__c</fullName>
        <description>The value of the data in the source system</description>
        <inlineHelpText>The value of the data in the source system</inlineHelpText>
        <label>System Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System__c</fullName>
        <description>The source system for the data</description>
        <inlineHelpText>The source system for the data</inlineHelpText>
        <label>System</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce</fullName>
                    <default>true</default>
                    <label>Salesforce</label>
                </value>
                <value>
                    <fullName>UCID</fullName>
                </value>
                <value>
                    <fullName>OMS</fullName>
                </value>
                <value>
                    <fullName>Finesse</fullName>
                </value>
                <value>
                    <fullName>Blue Martini</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The type of data being referenced</description>
        <inlineHelpText>The type of data being referenced</inlineHelpText>
        <label>Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Reference Data</label>
    <listViews>
        <fullName>All_with_Info</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>System__c</columns>
        <columns>Type__c</columns>
        <columns>Language__c</columns>
        <columns>System_Value__c</columns>
        <columns>Salesforce_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All with Info</label>
    </listViews>
    <pluralLabel>Reference Data</pluralLabel>
</CustomObject>